--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,11 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+   .content-wrapper {
+    width: 90%;
+    margin: 50px 0;
+  }
+
   /*----------BASE HEADER FOOTER -------------------*/
   header,
   footer {
@@ -100,7 +105,7 @@ textarea {
   /*HEADER STYLES*/
 
   header {
-
+    padding: 15px 0;
   }
 
   header .content-wrapper {
@@ -108,10 +113,13 @@ textarea {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    margin: 0;
   }
 
-  header .header-divider {
-
+.header-divider {
+    height: 1px;
+    margin: 10px 0 20px 0;  
+    width: 100%;
   }
 
   header nav {
@@ -119,11 +127,13 @@ textarea {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
+    width: 60%;
   }
 
   header nav ul {
     display: flex;
     justify-content: space-around;
+    width: 100%;
   }
 
   header nav ul li {
@@ -134,11 +144,12 @@ textarea {
   /*FOOTER STYLES*/
 
   footer {
-
+    flex-direction: column;
   }
 
   footer .content-wrapper {
-
+    margin: 50px 0;
+    width: 55%;
   }
 
   footer .footer-content {
@@ -146,11 +157,11 @@ textarea {
   }
 
   footer .contact {
-
+    margin-bottom: 50px;
   }
 
   footer .social {
-
+  
   }
 
   footer .social-icons p {
@@ -166,7 +177,7 @@ textarea {
   }
 
   footer .copyright {
-
+    margin: 20px 0;
   }
 
 
@@ -177,9 +188,6 @@ textarea {
     justify-content: center;
   }
 
-  .content-wrapper {
-
-  }
 
   aside {
     align-items: center;
@@ -193,7 +201,7 @@ textarea {
   }
 
   .form-description {
-
+    
   }
 
   .form {
@@ -206,11 +214,24 @@ textarea {
     justify-content: center;
   }
 
+  .features h2 {
+    margin-bottom: 60px;
+  }
+
   .features .features-items {
     align-items: center;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+  }
+
+  .features article {
+    width: 63%;
+    margin: 30px 0;
+  }
+
+  .features p {
+    margin:0;
   }
 
   .fontawesome-icon {
@@ -225,6 +246,19 @@ textarea {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+  }
+
+  .reviews h2 {
+    margin-bottom: 40px;
+  }
+
+  .reviews h3 {
+    margin: 20px 0;
+    width: 55%;
+  }
+
+  .reviews article p {
+
   }
 
 
@@ -251,8 +285,8 @@ textarea {
     justify-content: center;
   }
 
-  .contact-content {
-
+  .contact-content p {
+    margin: 0;
   }
 
 
@@ -264,13 +298,22 @@ textarea {
     justify-content: center;
   }
 
-  .faq-content {
+  .faq .content-wrapper {
     align-items: center;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    margin: 50px 0 0 0;
   }
 
+  .faq h2 {
+    margin-bottom: 40px;
+  }
+  
+  .faq-content {
+    margin-bottom: 50px;
+  }
+  
 
 
 
