--- a/css/main.css
+++ b/css/main.css
@@ -544,6 +544,56 @@ footer .copyright {
   /* DESKTOP STYLES HERE*/
 
 
+  /*HOMEPAGE DESKTOP*/
+  .content-wrapper {
+          max-width: 960px;
+      }
+
+  /* Hero */
+  .hero-area h1 {
+    width: 60%;
+  }
+
+  /* Aside */
+  aside .content-wrapper {
+      justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+      width: 30%;
+  }
+
+  /* Features */
+  .features h2 {
+    width: 90%;
+  }
+
+  .features article {
+    flex-basis: 33%;
+  }
+
+  /* Reviews */ 
+  .reviews article div {
+    width: 42%;
+  }
+
+  /*ABOUT DESKTOP*/
+  .mission h2,
+  .contact-section .content-wrapper h2 {
+        width: 95%;
+    }
+
+
+  /*FAQ DESKTOP*/
+  .faq h2 {
+    width: 100%;
+}
+
+}
+
+
+
 }
 
 
