Added icons to features

--- a/css/main.css
+++ b/css/main.css
@@ -344,8 +344,9 @@ textarea {
     text-align: center;
   }
 
-  .fontawesome-icon {
-
+  .features i {
+    font-size: 3.75em;
+    margin-bottom: 40px;
   }
 
   .features-item-description {
